- Consolidate services scss files into one (however, keep namespacing) - Simplify services class names

--- a/_includes/services-modal.html
+++ b/_includes/services-modal.html
@@ -20,7 +20,7 @@
 				<p>
 			</div>
 
-			<div class="service-section service-learn-more">
+			<div class="learn-more">
 				<a
 					href="{{ include.link }}"
 					class="btn-learn-more btn-learn-more--orange"
