--- a/_includes/service-example.html
+++ b/_includes/service-example.html
@@ -1,44 +1,42 @@
 {% if include.examples.size > 0 %}
-	<div class="services__examples">
-		<div class="services-carousel">
-			{% for example in include.examples %}
-				<div>
-					<div class="service-slide">
+	<div class="services-carousel">
+		{% for example in include.examples %}
+			<div>
+				<div class="slide">
 
-						{% if include.multi-image %}
-							<div
-								class="service-slide__image"
-								style="background-image: url('{{ example.image_1 }}')"
-							></div>
-						{% endif %}
+					{% if include.multi-image %}
+						<div
+							class="slide__image"
+							style="background-image: url('{{ example.image_1 }}')"
+						></div>
+					{% endif %}
 
-						<div class="service-slide__text">
+					<div class="slide__text">
 
-							<h5 class="service-header">
-								{{ example.header }}
-							</h5>
+						<h5 class="example-header">
+							{{ example.header }}
+						</h5>
 
-							<div class="inline-block">
-								<ul class="highlight-list">
-									{% for highlight in example.highlights %}
-										<li>
-											<div class="bullet-square"></div>
-											{{ highlight }}
-										</li>
-									{% endfor %}
-								</ul>
-							</div>
-
+						<div class="inline-block">
+							<ul class="highlights">
+								{% for highlight in example.highlights %}
+									<li>
+										<div class="bullet-square"></div>
+										{{ highlight }}
+									</li>
+								{% endfor %}
+							</ul>
 						</div>
 
-						<div
-							class="service-slide__image"
-							style="background-image: url('{{ example.image_2 }}')"
-						></div>
-
 					</div>
+
+					<div
+						class="slide__image"
+						style="background-image: url('{{ example.image_2 }}')"
+					></div>
+
 				</div>
-			{% endfor %}
-		</div>
+			</div>
+		{% endfor %}
 	</div>
 {% endif %}
