--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -39,18 +39,6 @@
     }
   }
 
-  .services-carousel {
-    .slick-dots {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      bottom: 30px;
-      @include mobile {
-        bottom: -28px;
-      }
-    }
-  }
-
   .title {
     @include expanding-hover($primary-color);
     text-decoration: none;
@@ -87,27 +75,37 @@
     outline: none;
   }
 
-  .service-slide__text {
-    text-align: center;
-    flex-basis: 33.33%;
-    // don't let text overlap slick dots
-    padding: 0 12px 52px 12px;
-    @include mobile {
-      order: -1;
-      padding: 0;
+  .services-carousel {
+    padding-top: 0;
+    .slick-dots {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 30px;
+      @include mobile {
+        bottom: -28px;
+      }
     }
-  }
-
-  .service-slide__image {
-    flex-basis: 33.33%;
-    @include mobile {
-      margin-bottom: 20px;
+    .slide__text {
+      text-align: center;
+      flex-basis: 33.33%;
+      // don't allow text to overlap slick dots
+      padding: 24px 12px 52px 12px;
+      @include mobile {
+        order: -1;
+        padding: 0;
+        margin: 20px 0;
+      }
     }
-  }
 
-  .service-header {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-    color: $primary-color;
+    .slide__image {
+      flex-basis: 33.33%;
+    }
+
+    .example-header {
+      font-size: 1.5em;
+      margin-bottom: 10px;
+      color: $primary-color;
+    }
   }
 }
