--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -3,7 +3,6 @@
 
   .modal__inner--floating {
     width: 80%;
-
     @include mobile {
       width: 100%;
     }
@@ -19,7 +18,6 @@
     @include close-button-small;
     top: 28px;
     right: 35px;
-
     @include mobile {
       @include close-button;
       padding: 21px;
@@ -45,17 +43,13 @@
   }
 
   .content {
-    padding: 35px;
+    padding: 18px 35px;
     font-size: 0.8em;
     background-color: white;
 
     @include mobile {
       background-color: white;
     }
-  }
-
-  .description {
-    padding-top: 1.5em;
   }
 
   .learn-more {
