More modal updates (#16)
*
- Move nav-modal styles into their own sheet & make nav modal links 100% width clickable
- Refactor the modal mixin so that it includes the `modal` class declaration. Important so that we can apply the mixins + easily override its values

* 
- Fix issue with services modal content not being visible at certain breakpoints
- Refactor and simplify the shared rules for the services sections on the experience and home pages
- Move services-modal styles into their own sheet

* 
- Consolidate services scss files into one (however, keep namespacing)
- Simplify services class names

* Make phone links on agent card clickable.

--- a/_includes/services-modal.html
+++ b/_includes/services-modal.html
@@ -1,7 +1,10 @@
-<div class="inner">
-	<div class="services-modal-content">
+<div
+	id="{{ include.id }}"
+	class="service-modal modal"
+>
+	<div class="modal__inner modal__inner--floating">
 
-		<div class="service-detail-close"></div>
+		<div class="service-detail-close modal__close"></div>
 
 		<div class="header">
 			<h1>
@@ -11,13 +14,13 @@
 
 		<div class="content">
 
-			<div class="service-section">
+			<div class="description">
 				<p>
 					{{ include.body-text }}
 				<p>
 			</div>
 
-			<div class="service-section service-section--learn-more">
+			<div class="learn-more">
 				<a
 					href="{{ include.link }}"
 					class="btn-learn-more btn-learn-more--orange"
