--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -1,104 +1,114 @@
-.service-section {
-  padding-bottom: 52px;
-}
+.service-modal {
+  @include modal;
 
-.service-section--highlights {
-  display: flex;
-}
-
-.service-section--learn-more {
-  text-align: center;
-}
-
-.service-highlight--text {
-  flex-basis: 40%;
-  text-align: left;
-}
-
-.highlight__list {
-  text-align: left;
-  padding-left: 15px;
-  font-size: 1.2em;
-  > li {
-    list-style-type: none;
-  }
-}
-
-.highlight__bullet {
-  display: inline-block;
-  padding: 5px;
-  margin-right: 4px;
-  background-color: $primary-color;
-}
-
-.highlight__header {
-  color: $primary-color;
-}
-
-.service-highlight {
-  @include mobile {
-    margin-bottom: 20px;
-  }
-}
-
-.service-highlight--image {
-  flex-basis: 60%;
-  min-height: 300px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.service-section--highlights {
-  .service-highlight:nth-child(1):nth-last-child(3),
-  .service-highlight:nth-child(2):nth-last-child(2),
-  .service-highlight:nth-child(3):nth-last-child(1) {
-    flex-basis: 33.3333%;
-  }
-  .service-highlight:nth-child(2):nth-last-child(2) {
-    &.service-highlight--text {
-      // prevent text from overlapping abs positioned dots
-      padding-bottom: 52px;
-      @include mobile {
-        order: -1;
-        padding-bottom: 0;
-      }
-    }
-  }
-  .service-highlight:nth-child(1):nth-last-child(2) {
-    &.service-highlight--text {
-      padding-right: 22px;
-    }
-    .highlight__header {
-      font-size: 1.3em;
-      color: $grey;
-      margin: 10px 0;
-    }
+  .modal__inner--floating {
+    width: 80%;
     @include mobile {
-      &.service-highlight--text {
-        order: 1;
-        padding-right: 0;
+      width: 100%;
+    }
+  }
+
+  min-width: 420px;
+
+  @include mobile {
+    min-width: 0;
+  }
+
+  .service-detail-close {
+    @include close-button-small;
+    top: 28px;
+    right: 35px;
+    @include mobile {
+      @include close-button;
+      padding: 21px;
+    }
+  }
+
+  .header {
+    background-color: $primary-color;
+    // extra right padding is to prevent header text from encroaching on the close button
+    padding: 25px 76px 25px 35px;
+    color: white;
+
+    > h1 {
+      margin: 0 24px 0 0;
+    }
+
+    @include mobile {
+      font-size: 0.8em;
+      > h1 {
+        padding-right: 30px;
       }
     }
   }
-  .service-highlight:nth-child(2):nth-last-child(2) {
-    text-align: center !important;
-    .highlight__header {
-      font-size: 1.5em;
-      margin-bottom: 10px;
+
+  .content {
+    padding: 18px 35px;
+    font-size: 0.8em;
+    background-color: white;
+
+    @include mobile {
+      background-color: white;
     }
   }
-  @include mobile {
-    flex-direction: column;
+
+  .learn-more {
+    text-align: center;
+    padding-top: 1.5em;
   }
 }
 
 .services-carousel {
   text-align: center;
-}
+  padding-top: 3em;
 
-.services-carousel {
   .slick-dots {
     margin-top: 24px;
+  }
+
+  .slide {
+    display: flex;
+
+    @include mobile {
+      flex-direction: column;
+    }
+  }
+
+  .slide__text {
+    flex-basis: 40%;
+    padding-left: 22px;
+    text-align: left;
+
+    @include mobile {
+      order: 1;
+      padding: 0;
+    }
+  }
+
+  .slide__image {
+    @include bg-cover-center;
+    flex-basis: 60%;
+    min-height: 300px;
+
+    @include mobile {
+      margin-bottom: 20px;
+    }
+  }
+
+  .highlights {
+    text-align: left;
+    padding-left: 15px;
+    font-size: 1.2em;
+
+    > li {
+      list-style-type: none;
+    }
+  }
+
+  .example-header {
+    color: $primary-color;
+    font-size: 1.3em;
+    color: $grey;
+    margin: 10px 0;
   }
 }
