--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -197,13 +197,23 @@
                                 </div>
                               </a>
 
-                              <h3 style="text-transform: uppercase">
-                                {{ page.address-line-1 }}
-                              </h3>
+                              <a
+                                href="https://maps.google.com/?ll={{ page.latitude }},{{ page.longitude}}"
+                                target="_blank"
+                                style="
+                                  text-decoration: none;
+                                  color: black;
+                                "
+                              >
 
-                              <h1 style="text-transform: uppercase">
-                                {{ page.address-line-2 }}
-                              </h1>
+                                <h3 style="text-transform: uppercase">
+                                  {{ page.address-line-1 }}
+                                </h3>
+
+                                <h1 style="text-transform: uppercase">
+                                  {{ page.address-line-2 }}
+                                </h1>
+                              </a>
 
                               <p>
                                 {{ page.info-text }}
