--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -152,7 +152,8 @@
                               src="{{page.property-header}}"
                               mc:label="header_image"
                               mc:edit="header_image"
-                              mc:allowdesigner mc:allowtext
+                              mc:allowdesigner
+                              mc:allowtext
                               style="width: 100%;"
                             />
                           </td>
