--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -592,6 +592,29 @@
                             </td>
                           </tr>
 
+                          <tr>
+                            <td
+                              style="
+                                text-align: right;
+                                padding: 5px;
+                              "
+                            >
+                            <!-- TODO: It's a mailchimp *requirement* to have an unsubscribe link in the body of a mailer
+                            template. Since this newsletter isn't used in production yet, the link just goes to GroundSource homepage.
+                            If we are ever to create a mailer, we will need to creat a hook / mechanism which will allow users to unsubscribe. -->
+                              <a
+                                href="{{ gs_url }}"
+                                target="_blank"
+                                style="
+                                  font-size: .8em;
+                                  color: black;
+                                "
+                              >
+                                Unsubscribe
+                              </a>
+                            </td>
+                          </tr>
+
                       </table>
 
                   </table>
