--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -180,14 +180,17 @@
                   >
 
                     <tr>
-                      <td width="100%">
+                      <td
+                        width="100%"
+                        height="52"
+                      >
 
                         <a
                           href="{{ gs_url }}/listings/{{page.title}}/listing.html"
                           target="_blank"
                           style="text-decoration: none"
                         >
-                          <div
+                          <span
                             style="
                               width: 140px;
                               padding: 8px 16px;
@@ -204,9 +207,13 @@
                             "
                           >
                             VIEW DETAILS
-                          </div>
+                          </span>
                         </a>
+                      </td>
+                    </tr>
 
+                    <tr>
+                      <td>
                         <a
                           href="https://maps.google.com/?ll={{ page.latitude }},{{ page.longitude}}"
                           target="_blank"
@@ -216,21 +223,38 @@
                           "
                         >
 
-                          <h3 style="text-transform: uppercase">
+                          <span
+                            style="
+                              text-transform: uppercase;
+                              font-size: 1.17em;
+                              font-weight: 600;
+                            "
+                            >
                             {{ page.address-line-1 }}
-                          </h3>
-
-                          <h1 style="text-transform: uppercase">
+                          </span>
+                          <br />
+                          <br />
+                          <span
+                            style="
+                              text-transform: uppercase;
+                              font-size: 2em;
+                              font-weight: 600;
+                            ">
                             {{ page.address-line-2 }}
-                          </h1>
+                          </span>
                         </a>
-
-                        <p>
-                          {{ page.info-text }}
-                        </p>
 
                       </td>
                     </tr>
+
+                    <tr>
+                      <td>
+                        <p>
+                          {{ page.info-text }}
+                        </p>
+                      </td>
+                    </tr>
+
                   </table>
 
                   <table
@@ -249,16 +273,19 @@
                           width="50%"
                           style="position: relative;"
                         >
-                          <img
-                            src="{{ gs_url }}{{ page.gallery-images[0] }}"
-                            width="100%"
-                            height="100%"
+                          <div
                             style="
                               position: absolute;
                               top: 0;
                               left: 0;
+                              width: 100%;
+                              height: 100%;
+                              background-position: center;
+                              background-size: cover;
+                              background-repeat: no-repeat;
+                              background-image: url('{{ gs_url }}{{ page.gallery-images[0] }}')
                             "
-                          />
+                          ></div>
                           <div style="padding-bottom: 75%;"></div>
                         </td>
                       {% endif %}
@@ -268,16 +295,19 @@
                           width="50%"
                           style="position: relative;"
                         >
-                          <img
-                            src="{{ gs_url }}{{ page.gallery-images[1] }}"
-                            width="100%"
-                            height="100%;"
+                          <div
                             style="
                               position: absolute;
                               top: 0;
                               left: 0;
+                              width: 100%;
+                              height: 100%;
+                              background-position: center;
+                              background-size: cover;
+                              background-repeat: no-repeat;
+                              background-image: url('{{ gs_url }}{{ page.gallery-images[1] }}')
                             "
-                          />
+                          ></div>
                           <div style="padding-bottom: 75%;"></div>
                         </td>
                       {% endif %}
@@ -526,17 +556,17 @@
                         width="100%"
                         style="padding: 0 8px;"
                       >
-                        <a
-                          href="{{ gs_url }}/index.html#contact"
-                          target="_blank"
-                          style="
-                            color: white;
-                            text-decoration: none;
-                          "
-
-                        >
                           <h3>
-                            CONTACT US
+                            <a
+                              href="{{ gs_url }}/index.html#contact"
+                              target="_blank"
+                              style="
+                                color: white;
+                                text-decoration: none;
+                              "
+                            >
+                              CONTACT US
+                            </a>
                           <h3>
                         </a>
                       </td>
