Make styling of 'unsubscribe' more closely match the rest of the newsletter.

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -638,7 +638,8 @@
                             target="_blank"
                             style="
                               font-size: .8em;
-                              color: black;
+                              color: white;
+                              text-decoration: none;
                             "
                           >
                             Unsubscribe
