Don't allow text in filter buttons to wrap && make sure they're centered on the page.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -117,7 +117,7 @@
 
             </select>
 
-            <div>
+            <div class="mx-auto">
 
               <button
                 id="listing-clear-filters"
