--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
 @import "vendor/sanitize.scss";
 @import "variables.scss";
 @import "mixins.scss";
+@import "body.scss";
 @import "nav-modal.scss";
 @import "agent-card.scss";
 @import "agent-modal.scss";
@@ -15,7 +16,6 @@
 @import "services.scss";
 @import "services.scss";
 @import "home.scss";
-@import "index.scss";
 @import "listing.scss";
 @import "listings.scss";
 @import "about.scss";
