- Move styles from body.scss into the files that they correspond to - Move global styles into body.scss - Cleanup unused styles - Rename some styles to be more descriptive (for example 'subdued' became 'opacity-50'

--- a/_includes/agent-card.html
+++ b/_includes/agent-card.html
@@ -38,7 +38,7 @@
 		>
 
 			{% if include.agent.email.size > 0 %}
-				<div class="black">
+				<div class="text-black">
 					<a
 						href="mailto:{{include.agent.email}}"
 						class="text-decoration-none"
