--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -7,7 +7,7 @@
       <div>
         <img
           src="/images/phone-icon.png"
-          class="icon-small"
+          class="icon"
         />
       </div>
 
@@ -25,7 +25,7 @@
     <div>
       <img
         src="/images/email-icon.png"
-        class="icon-small"
+        class="icon"
       />
     </div>
 
@@ -44,7 +44,7 @@
     <div>
       <img
         src="/images/location-icon.png"
-        class="icon-small"
+        class="icon"
       />
     </div>
 
@@ -63,7 +63,7 @@
     <div>
       <img
         src="/images/ig-icon.png"
-        class="icon-small"
+        class="icon"
         />
     </div>
 
