--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -99,7 +99,10 @@
 
       {% include nav-modal.html active-section="home" %}
 
-      <div id="header-home">
+      <div
+        id="hero-home"
+        class="hero"
+      >
 
         <div id="header-content">
 
@@ -125,7 +128,7 @@
 
         <div class="flexbox">
 
-          <div class="home-intro-left">
+          <div class="intro-left">
 
             <div class="section-header">
               ABOUT <span>GROUND</span>SOURCE
@@ -138,7 +141,7 @@
           </div>
 
           <div
-            class="home-intro-right"
+            class="intro-right"
             style="background-image: url('{{ page.intro_image }}');"
           ></div>
 
