--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -19,7 +19,7 @@
             class="logo"
           />
 
-          <div class="contact more-subdued">
+          <div class="contact opacity-60">
 
             <div>
 
