--- a/_sass/contact-info.scss
+++ b/_sass/contact-info.scss
@@ -5,6 +5,10 @@
   font-size: 16px;
   background: rgba(255, 255, 255, 0.9);
   list-style-type: none;
+  .icon {
+    width: 38px;
+    margin-right: 8px;
+  }
 }
 .contact__link {
   width: 50%;
