--- a/_sass/body.scss
+++ b/_sass/body.scss
@@ -11,28 +11,62 @@ body {
   letter-spacing: 0.5px;
 }
 
+strong,
+b {
+  font-weight: 700;
+}
+
+a {
+  color: inherit;
+}
+
+.modal__close {
+  @include close-button;
+  position: absolute;
+  color: $primary-color;
+  cursor: pointer;
+  padding: 21px;
+}
+
+.rounded-red-button {
+  border-radius: 500px;
+  margin-top: 22px;
+  font-weight: 500;
+  font-size: 0.7em;
+  color: $primary-color-darker-darker;
+  border-color: $primary-color-darker-darker;
+  border-style: solid;
+  border-width: thin;
+  padding: 5px 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  @include mobile {
+    font-size: 1em;
+  }
+}
+
+.pt-site-header {
+  padding-top: $pt-site-header;
+}
+
+.bullet-square {
+  display: inline-block;
+  padding: 5px;
+  margin-right: 4px;
+  background-color: $primary-color;
+}
+
+.mx-auto {
+  margin: 0 auto;
+}
+
 .text-decoration-none {
   text-decoration: none;
 }
 
 .hidden {
   display: none;
-}
-
-.services-home-button {
-  cursor: pointer;
-}
-
-form.login {
-  > label {
-    float: left;
-    margin-bottom: 15px;
-  }
-
-  > input {
-    float: right;
-    margin-bottom: 15px;
-  }
 }
 
 .success {
@@ -47,21 +81,12 @@ form.login {
   width: 450px;
 }
 
-.modal-open {
-  overflow: hidden;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
-strong,
-b {
-  font-weight: 700;
-}
-
-a {
-  color: inherit;
+.slick-slide {
+  outline: none;
 }
 
 .slick-dots {
@@ -95,43 +120,24 @@ a {
   }
 }
 
-.mobile-nav {
-  display: none;
-}
-
-.subdued {
+.opacity-50 {
   opacity: 0.5;
 }
 
-.black {
-  color: black;
-}
-.left {
-  float: left;
-  width: 49%;
-  padding-right: 15px;
+.opacity-60 {
+  opacity: 0.6;
 }
 
-.right {
-  float: right;
-  width: 49%;
-  padding-left: 1px;
+.opacity-90 {
+  opacity: 0.9;
+}
+
+.text-black {
+  color: black;
 }
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.property-slideshow {
-  padding-top: 12px;
-}
-
-.preview-contents {
-  padding: 8px;
-}
-
-.underline {
-  text-decoration: underline;
 }
 
 .text-centered {
@@ -142,57 +148,9 @@ a {
   font-weight: 100;
 }
 
-.preview-map {
-  width: 230px;
-  position: absolute;
-  margin-top: -30px;
-}
-
-.preview-title {
-  color: white;
-  font-size: 1.5em;
-  position: absolute;
-  margin-top: -65px;
-  margin-left: 31px;
-}
-
 .medium-white-text {
   color: white;
   font-size: 1.5em;
-}
-
-.preview-text {
-  font-size: 0.75em;
-  font-weight: lighter;
-  color: #858585;
-}
-
-.review-carousel {
-  .slick-track {
-    height: 250px;
-  }
-}
-
-.review {
-  outline: none;
-  padding: 6px 60px;
-  position: relative;
-  .inner-review {
-    position: absolute;
-    top: 62%;
-    left: 120px;
-    transform: translateY(-50%);
-    width: 80%;
-    @media screen and (max-width: 1100px) {
-      position: static;
-      transform: none;
-      width: 100%;
-    }
-  }
-}
-
-#home-image {
-  vertical-align: middle;
 }
 
 .logo-upper-left {
@@ -213,210 +171,8 @@ a {
   @include hamburger-menu;
 }
 
-#top-nav {
-  font-size: 14px;
-  color: white;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 3;
-  white-space: nowrap;
-  > ul {
-    list-style-type: none;
-    white-space: nowrap;
-    margin: 30px 30px 0 0;
-    > li {
-      display: inline-block;
-      font-size: 1.2em;
-      padding: 8px;
-      > a {
-        @include expanding-hover(white);
-        position: relative;
-        color: white;
-        text-decoration: none;
-        line-height: 2;
-      }
-      > a:hover {
-        color: white;
-      }
-    }
-  }
-}
-
-.ham-menu-mobile {
-  @include hamburger-menu;
-}
-
-.ham-menu-home {
-  display: none;
-}
-
-.contact-form-status {
-  padding: 40px;
-  display: none;
-}
-
-#form-submit-loader {
-  padding: 10px;
-  display: none;
-}
-
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-}
-.loader {
-  margin: 60px auto;
-  font-size: 3px;
-  position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid #858585;
-  border-right: 1.1em solid #858585;
-  border-bottom: 1.1em solid #858585;
-  border-left: 1.1em solid #ffffff;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
-}
-
 .inline-block {
   display: inline-block;
-}
-
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-#submit-contact-form {
-  cursor: pointer;
-}
-
-.home-intro-left {
-  width: 50%;
-  padding: 80px;
-  background-color: white;
-  font-family: $font-brand;
-  color: #b4b3b3;
-  letter-spacing: 0.5px;
-  color: #858585;
-  overflow: hidden;
-  > p {
-    margin-top: 26px;
-  }
-}
-
-.home-intro-right {
-  width: 50%;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  > img {
-    display: inline-block;
-  }
-}
-
-.preview-header {
-  height: 50%;
-  width: 100%;
-}
-
-#header-home {
-  position: relative;
-  background-image: url(../images/background.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center 0;
-  text-align: center;
-  height: 75vh;
-}
-
-#header-content {
-  position: absolute;
-  width: 100%;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#header-text {
-  transition-property: all;
-  transition-duration: 0.4s;
-}
-
-#header-logo {
-  height: 47px;
-  // setup like this in case browser isnt js enabled
-  &.prepareSlideUp {
-    position: relative;
-    top: 104px;
-    opacity: 0;
-  }
-  &.slideUp {
-    opacity: 1;
-    top: 0;
-    transition-property: all;
-    transition-duration: 0.6s;
-  }
-}
-
-.scroll-arrow {
-  cursor: pointer;
-  position: absolute;
-  opacity: 0.8;
-  width: 54px;
-  margin-left: -(54px/2);
-  bottom: 10%;
-  left: 50%;
-  &:hover {
-    animation-name: scrollDown;
-    animation-duration: 0.4s;
-    animation-fill-mode: forwards;
-  }
-}
-
-@keyframes scrollDown {
-  60% {
-    bottom: 7%;
-  }
-  100% {
-    bottom: 8.5%;
-  }
-}
-
-#header-text {
-  position: relative;
-  opacity: 0;
-  z-index: 2;
-  font-family: $font-brand;
-  color: white;
-  font-size: 1.5em;
-  letter-spacing: 0.16em;
-  padding-top: 25px;
-}
-
-#item-top {
-  margin-top: -442px;
-  background-color: $background-color;
 }
 
 .section-header {
@@ -433,31 +189,10 @@ a {
 .flexbox {
   display: flex;
   position: relative;
-  flex-direction: row;
   flex-flow: row wrap;
   justify-content: center;
   margin: 0 auto;
   max-width: $page-max-width;
-}
-
-.flexbox-full {
-  display: flex;
-  flex-direction: row;
-  flex-flow: row wrap;
-}
-
-.item {
-  width: $col-width;
-  margin: 16px;
-}
-
-.logo-small {
-  height: $logo-small;
-  margin-bottom: 4px;
-}
-
-.image-medium {
-  height: $medium-image-height;
 }
 
 .title {
@@ -468,22 +203,6 @@ a {
 .img-responsive {
   display: block;
   max-width: 100%;
-}
-
-#review-navigator {
-  width: 100%;
-  div {
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    border-style: solid;
-    border-width: 1px;
-    color: $primary-color-darker-darker;
-    display: inline-block;
-    &.selected {
-      background-color: $primary-color-darker-darker;
-    }
-  }
 }
 
 .navigation-arrows {
@@ -535,66 +254,6 @@ a {
   }
 }
 
-.review-slideshow {
-  background: linear-gradient(to bottom, #fbf9fa, #d4d2d3);
-  color: gray;
-  text-align: center;
-  font-size: 1.5em;
-  padding: 16px 12px;
-  .inner {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-
-  .review::before {
-    content: "";
-    display: inline-block;
-    vertical-align: middle;
-    height: 100%;
-  }
-
-  .review div {
-    vertical-align: middle;
-    display: inline-block;
-  }
-
-  .review {
-    padding-top: 33px;
-    text-align: center;
-    p {
-      max-width: 800px;
-      vertical-align: middle;
-      font-size: 0.7em;
-      padding: 12px;
-      text-align: left;
-      display: inline-block;
-      strong {
-        text-transform: uppercase;
-      }
-    }
-    img {
-      display: inline-block;
-      z-index: 25;
-      width: 100px;
-      border-style: solid;
-      border-radius: 500px;
-      border-color: white;
-      box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
-    }
-  }
-}
-
-.btn-services {
-  cursor: pointer;
-  position: absolute;
-  display: inline-block;
-  bottom: 2em;
-  @include mobile {
-    position: static;
-  }
-}
-
 .btn-learn-more {
   padding: 8px 16px;
   border: medium solid white;
@@ -606,115 +265,6 @@ a {
 .btn-learn-more--orange {
   color: $primary-color;
   border-color: $primary-color;
-}
-
-.services-container {
-  position: relative;
-  background-color: $primary-color;
-  > div {
-    color: white;
-    max-width: 1800px;
-    margin: 0 auto;
-    height: 100%;
-  }
-}
-
-.services-header {
-  font-size: 3em;
-  padding-left: 80px;
-}
-
-.services-row {
-  display: flex;
-  align-items: stretch;
-}
-
-.services-text {
-  display: inline-block;
-  padding: 3em 3em 6em 80px;
-  opacity: 0.9;
-  width: 33%;
-}
-
-.service-description {
-  padding: 1.5em 0;
-}
-
-.icon-small {
-  width: 38px;
-  margin-right: 8px;
-}
-
-#listings-arrow-left {
-  left: -158px;
-  top: 66px;
-}
-
-#listings-arrow-right {
-  left: 374px;
-  top: 66px;
-}
-
-.listings-arrow {
-  position: absolute;
-  width: 300px;
-}
-
-.simple-close {
-  @include close-button;
-  z-index: 10;
-  background-size: 18px 18px;
-  padding: 31px;
-  cursor: pointer;
-}
-
-.to-top {
-  @include hamburger-menu;
-  background-image: url(../images/scroll-arrow-up.png);
-  position: absolute !important;
-  top: auto;
-  bottom: 10px !important;
-  right: 10px !important;
-  height: 2em;
-}
-
-.arrow-up {
-  width: 100%;
-  transform: rotate(180deg);
-  overflow: hidden;
-}
-
-@media screen and (max-width: 1100px) {
-  .review-carousel {
-    .slick-track {
-      height: 300px;
-    }
-  }
-  .review-slideshow {
-    padding: 0;
-    .review {
-      display: flex;
-      align-items: center;
-      padding: 0 100px;
-      margin-top: 2%;
-    }
-    .review::before {
-      display: none;
-    }
-    padding: 12px;
-    .inner {
-      img {
-        margin-top: 3px;
-        max-width: 35%;
-      }
-      p {
-        width: 100%;
-        max-width: 100%;
-        text-align: center;
-        padding: 0;
-      }
-    }
-  }
 }
 
 @media screen and (min-width: $page-max-width) {
@@ -747,21 +297,6 @@ a {
     bottom: 330px;
   }
 
-  .review img {
-    display: block;
-  }
-
-  .review p {
-    display: inline-block;
-    height: 100%;
-  }
-
-  .review-carousel {
-    .slick-track {
-      height: 300px;
-    }
-  }
-
   .nav-modal {
     .menu-close {
       padding: 21px;
@@ -771,38 +306,15 @@ a {
   .modal-open {
     display: none;
     height: 0;
+    overflow: hidden;
   }
 
   .navigation-arrow-right {
     right: 5%;
   }
 
-  #header-text {
-    font-size: 1.2em;
-    letter-spacing: 0.05em;
-  }
   .navigation-arrow-left {
     left: 5%;
-  }
-  .contact-row {
-    > {
-      width: 100%;
-    }
-  }
-
-  .services-header {
-    margin-top: 0;
-    padding-top: 12px;
-    padding-left: 21px;
-  }
-  .ham-menu {
-    display: block !important;
-    padding: 1.5em;
-    background-size: 1.5em;
-  }
-
-  #top-nav {
-    display: none !important;
   }
 
   .slick-dots {
@@ -820,83 +332,6 @@ a {
   .mobile-nav {
     display: block;
   }
-
-  #header-logo {
-    height: 29px;
-  }
-
-  .small-hidden {
-    display: none;
-  }
-
-  .home-intro-left {
-    display: inline-block;
-    width: 100%;
-    padding: 80px 20px 0 20px;
-  }
-
-  .home-intro-right {
-    display: none;
-  }
-
-  .services-info {
-    width: 100%;
-    margin-left: 0;
-  }
-
-  .services-row {
-    display: block;
-    .services-text {
-      width: 100%;
-      padding-left: $left-align-home-mobile;
-    }
-  }
-
-  .services-img {
-    display: none;
-  }
-
-  .property-preview {
-    width: 90%;
-  }
-
-  #header-home {
-    height: 80vh;
-  }
-
-  .home-intro {
-    width: 80%;
-    margin-top: 0;
-    > div {
-      padding: 10px;
-    }
-  }
-
-  .nav {
-    > li {
-      display: block;
-    }
-  }
-
-  #listings-sidebar {
-    width: 90%;
-  }
-
-  #listings-info {
-    width: 90%;
-  }
-
-  .ham-menu {
-    height: 2em;
-    width: 2em;
-  }
-
-  .services-info {
-    width: 100%;
-  }
-}
-.slick-slide {
-  outline: none;
 }
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
