--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -63,4 +63,300 @@
       font-size: 52px;
     }
   }
+
+  .review-slideshow {
+    background: linear-gradient(to bottom, #fbf9fa, #d4d2d3);
+    color: gray;
+    text-align: center;
+    font-size: 1.5em;
+    padding: 16px 12px;
+    .inner {
+      position: relative;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .review::before {
+      content: "";
+      display: inline-block;
+      vertical-align: middle;
+      height: 100%;
+    }
+
+    .review div {
+      vertical-align: middle;
+      display: inline-block;
+    }
+
+    .review {
+      padding-top: 33px;
+      text-align: center;
+      p {
+        max-width: 800px;
+        vertical-align: middle;
+        font-size: 0.7em;
+        padding: 12px;
+        text-align: left;
+        display: inline-block;
+        strong {
+          text-transform: uppercase;
+        }
+      }
+      img {
+        display: inline-block;
+        z-index: 25;
+        width: 100px;
+        border-style: solid;
+        border-radius: 500px;
+        border-color: white;
+        box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
+      }
+    }
+    @include mobile {
+      padding: 0;
+      .review {
+        display: flex;
+        align-items: center;
+        padding: 0 100px;
+        margin-top: 2%;
+      }
+      .review::before {
+        display: none;
+      }
+      padding: 12px;
+      .inner {
+        img {
+          display: block;
+          margin-top: 3px;
+          max-width: 35%;
+          margin: 0 auto;
+        }
+        p {
+          width: 100%;
+          max-width: 100%;
+          display: inline-block;
+          text-align: center;
+          padding: 0;
+        }
+      }
+    }
+  }
+
+  .review-carousel {
+    .slick-track {
+      height: 250px;
+    }
+    @include mobile {
+      .slick-track {
+        height: 300px;
+      }
+    }
+  }
+
+  .services-text {
+    display: inline-block;
+    padding: 3em 3em 6em 80px;
+    opacity: 0.9;
+    width: 33%;
+  }
+
+  .services-container {
+    position: relative;
+    background-color: $primary-color;
+    > div {
+      color: white;
+      max-width: 1800px;
+      margin: 0 auto;
+      height: 100%;
+    }
+  }
+
+  .services-header {
+    font-size: 3em;
+    padding-left: 80px;
+    @include mobile {
+      margin-top: 0;
+      padding-top: 12px;
+      padding-left: 21px;
+    }
+  }
+
+  .services-row {
+    display: flex;
+    align-items: stretch;
+    @include mobile {
+      display: block;
+      .services-text {
+        width: 100%;
+        padding-left: $left-align-home-mobile;
+      }
+    }
+  }
+
+  .service-description {
+    padding: 1.5em 0;
+  }
+
+  .btn-services {
+    cursor: pointer;
+    position: absolute;
+    display: inline-block;
+    bottom: 2em;
+    @include mobile {
+      position: static;
+    }
+  }
+
+  .scroll-arrow {
+    cursor: pointer;
+    position: absolute;
+    opacity: 0.8;
+    width: 54px;
+    margin-left: -(54px/2);
+    bottom: 10%;
+    left: 50%;
+    &:hover {
+      animation-name: scrollDown;
+      animation-duration: 0.4s;
+      animation-fill-mode: forwards;
+    }
+  }
+
+  .hero {
+    position: relative;
+    background-image: url(../images/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center 0;
+    text-align: center;
+    height: 75vh;
+    @include mobile {
+      margin-top: 0;
+      height: 80vh;
+      > div {
+        padding: 10px;
+      }
+    }
+  }
+
+  #header-content {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  #header-logo {
+    height: 47px;
+    // setup like this in case browser isnt js enabled
+    &.prepareSlideUp {
+      position: relative;
+      top: 104px;
+      opacity: 0;
+    }
+    &.slideUp {
+      opacity: 1;
+      top: 0;
+      transition-property: all;
+      transition-duration: 0.6s;
+    }
+    @include mobile {
+      height: 29px;
+    }
+  }
+
+  #header-text {
+    position: relative;
+    opacity: 0;
+    z-index: 2;
+    font-family: $font-brand;
+    color: white;
+    font-size: 1.5em;
+    letter-spacing: 0.16em;
+    padding-top: 25px;
+    transition-property: all;
+    transition-duration: 0.4s;
+    @include mobile {
+      font-size: 1.2em;
+      letter-spacing: 0.05em;
+    }
+  }
+
+  .intro-left {
+    width: 50%;
+    padding: 80px;
+    background-color: white;
+    font-family: $font-brand;
+    color: #b4b3b3;
+    letter-spacing: 0.5px;
+    color: #858585;
+    overflow: hidden;
+    > p {
+      margin-top: 26px;
+    }
+    @include mobile {
+      display: inline-block;
+      width: 100%;
+      padding: 80px 20px 0 20px;
+    }
+  }
+
+  .intro-right {
+    width: 50%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    > img {
+      display: inline-block;
+    }
+    @include mobile {
+      display: none;
+    }
+  }
+
+  .ham-menu-home {
+    display: none;
+  }
+
+  #top-nav {
+    font-size: 14px;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 3;
+    white-space: nowrap;
+    > ul {
+      list-style-type: none;
+      white-space: nowrap;
+      margin: 30px 30px 0 0;
+      > li {
+        display: inline-block;
+        font-size: 1.2em;
+        padding: 8px;
+        > a {
+          @include expanding-hover(white);
+          position: relative;
+          color: white;
+          text-decoration: none;
+          line-height: 2;
+        }
+        > a:hover {
+          color: white;
+        }
+      }
+    }
+    @include mobile {
+      display: none !important;
+    }
+  }
+
+  @keyframes scrollDown {
+    60% {
+      bottom: 7%;
+    }
+    100% {
+      bottom: 8.5%;
+    }
+  }
 }
