--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -16,6 +16,13 @@
   right: 18px;
   top: 18px;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.15);
+  @include mobile {
+    display: block !important;
+    padding: 1.5em;
+    background-size: 1.5em;
+    height: 2em;
+    width: 2em;
+  }
 }
 
 @mixin close-button {
