Instead of directly using jquery show() and hide(), add and remove 'active' class to the various states.

--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -3,6 +3,13 @@
   flex-direction: column;
   min-height: 100vh;
 
+  .state {
+    display: none;
+    &.active {
+      display: block;
+    }
+  }
+
   .info {
     @include bg-cover-center;
     text-align: center;
