--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -224,7 +224,7 @@
 
   .hero {
     position: relative;
-    background-image: url(../images/background.jpg);
+    background-image: url("../images/background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 0;
