--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -247,7 +247,7 @@ $listing-padding: 30px;
     }
 
     .header-text-listings {
-      font-family: $font-brand;
+      font-family: $font-montserrat;
       color: $background-color;
       font-size: 4em;
       padding-bottom: 0.5em;
@@ -323,7 +323,7 @@ $listing-padding: 30px;
 
     .menu {
       color: $background-color;
-      font-family: $font-brand;
+      font-family: $font-montserrat;
       letter-spacing: $title-letter-spacing;
       padding: $listing-padding;
     }
