--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
 $dark-background-color: #4c4c4c;
-$font-brand: Montserrat, Helvetica, Arial, sans-serif;
+$font-montserrat: Montserrat, Helvetica, Arial, sans-serif;
 $logo-small: 22px;
 $medium-image-height: 415px;
 $col-width: 530px;
