--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -269,7 +269,7 @@
     position: relative;
     opacity: 0;
     z-index: 2;
-    font-family: $font-brand;
+    font-family: $font-montserrat;
     color: white;
     font-size: 1.5em;
     letter-spacing: 0.16em;
@@ -286,7 +286,7 @@
     width: 50%;
     padding: 80px;
     background-color: white;
-    font-family: $font-brand;
+    font-family: $font-montserrat;
     color: #b4b3b3;
     letter-spacing: 0.5px;
     color: #858585;
